rename of membership css files (gotta keep it secret), updated reference to css file, styles for tier page

--- a/app/views/joiner/tier/partner.scala.html
+++ b/app/views/joiner/tier/partner.scala.html
@@ -7,94 +7,59 @@
 
 <div class="page-inner-container">
 
-    <h1 class="section-header">Partner Tier</h1>
-
-    <img src="@routes.Assets.at("images/placeholder-large.jpeg")" alt="" class="full-width"/>
-
-    <section class="tier-intro">
-        <p>Aliquam pellentesque eros eget metus sagittis, ut molestie nisi molestie. Sed nisl nunc, vehicula sed adipiscing in, tincidunt eu felis. Nam venenatis, tortor ac consequat venenatis, dolor odio ullamcorper diam, sed tempus purus lacus at justo.</p>
-        <div class="center-aligned">
-            <a class="button button--large join no-underline" href="/join/partner/payment">Join</a>
-        </div>
+    <section class="tier-section tier-section--left-aligned tier-section--no-border ">
+        <h1 class="section-header u-text-hyphenate">Partner Purpose/Value</h1>
+        <p>£15<a class="button button--margin button--wide join no-underline" href="/join/partner/payment">Join</a>Whats Included</p>
     </section>
 
-    <section class="tier-options-navigation">
-        <ul class="u-unstyled center-aligned">
-            <li class="inline-list__item"><a href="#link-one">Link 1</a></li>
-            <li class="inline-list__item"><a href="#link-two">Link 2</a></li>
-            <li class="inline-list__item"><a href="#link-three">Link 3</a></li>
-        </ul>
-    </section>
-
-    <section class="separator">
+    <section class="tier-navigation">
         <ul class="u-unstyled">
-            <li id="link-one" class="list-item">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-medium-square.jpeg")" alt="" class="full-width"/>
-                </div>
-                <p class="list-item__secondary">Vestibulum facilisis rhoncus libero nec congue.</p>
+            <li class="tier-navigation__tab inline-list__item">
+                <a href="#digital" class="tier-navigation__btn">Digital</a>
             </li>
-            <li id="link-two" class="list-item">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-medium-square.jpeg")" alt="" class="full-width"/>
-                </div>
-                <p class="list-item__secondary">Morbi velit arcu, tempor at metus non, ultrices.</p>
+            <li class="tier-navigation__tab inline-list__item">
+                <a href="#community" class="tier-navigation__btn">Community</a>
             </li>
-            <li id="link-three" class="list-item">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-medium-square.jpeg")" alt="" class="full-width"/>
-                </div>
-                <p class="list-item__secondary">Cras tortor odio, laoreet nec pharetra non.</p>
+            <li class="tier-navigation__tab inline-list__item">
+                <a href="#live" class="tier-navigation__btn">Live</a>
             </li>
         </ul>
     </section>
 
-    <section class="tier-advantages separator">
-        <ul class="u-unstyled">
-            <li class="list-item list-item--small">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
-                </div>
-                <p>Vestibulum facilisis rhoncus libero nec congue.</p>
-            </li>
-            <li class="list-item list-item--small">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
-                </div>
-                <p>Donec nisl enim, fermentum quis sem id</p>
-            </li>
-            <li class="list-item list-item--small">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
-                </div>
-                <p>Aliquam pharetra tellus nec massa lacinia volutpat.</p>
-            </li>
-            <li class="list-item list-item--small">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
-                </div>
-                <p>Morbi non iaculis metus. Donec nisl enim.</p>
-            </li>
-            <li class="list-item list-item--small">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
-                </div>
-                <p>Laoreet at urna ac, tincidunt accumsan mi.</p>
-            </li>
-            <li class="list-item list-item--small">
-                <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
-                </div>
-                <p>Quisque scelerisque magna lectus, a euismod.</p>
-            </li>
-        </ul>
+    <div class="separator"></div>
+    <section id="digital" class="tier-section">
+        <h2 class="section-header">Digital Benefits</h2>
     </section>
 
-    <section class="separator">
-        <p>Nunc dapibus tristique lacus, vitae ullamcorper turpis fermentum et. Curabitur nec dui vel magna ornare tincidunt id ac nibh. Cras non eleifend nisi, vitae interdum erat. Etiam suscipit rhoncus enim, ac scelerisque metus lobortis at.</p>
-        <div class="center-aligned">
-            <a class="button button--large join no-underline" href="/join/partner/payment">Join</a>
-        </div>
+    <section id="community" class="tier-section">
+        <h2 class="section-header">Community Benefits</h2>
+    </section>
+
+    <section id="live" class="tier-section tier-section--no-border">
+        <h2 class="section-header">Live Benefits</h2>
+    </section>
+
+    <div class="separator"></div>
+    <section>
+        <h2>Whats Included</h2>
+        <ul class="benefits u-unstyled">
+            <li class="benefits-list">
+                <span class="benefits-list__item">Digital</span>
+            </li>
+            <li class="benefits-list">
+                <span class="benefits-list__item">Community</span>
+            </li>
+            <li class="benefits-list">
+                <span class="benefits-list__item">Live</span>
+            </li>
+            <li class="benefits-list benefits-list--left-aligned">
+                <p class="benefits-list__item">
+                    <p >Partner</p>
+                    <p>£15</p>
+                </p>
+                <a class="button button--wide join no-underline" href="/join/partner/payment">Join</a>
+            </li>
+        </ul>
     </section>
 
 </div>
