--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,9 +16,30 @@
                                                                                       \ \_\
                                                                                        \/_/
         -->
+        <meta charset="utf-8">
+        <meta name="viewport"                       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <meta name="HandheldFriendly"               content="true"/>
+        <meta name="apple-touch-fullscreen"         content="yes" />
+        <meta name="apple-mobile-web-app-capable"   content="yes">
+        <meta name="author"                         content=""/>
+        <meta name="description"                    content=""/>
+        <meta name="keywords"                       content=""/>
+        <meta name="copyright"                      content=""/>
+        <meta name="rating"                         content="general"/>
+        <meta http-equiv="imagetoolbar"             content="no"/>
+        <meta name="Rating"                         content="general"/>
+        <meta name="Distribution"                   content="Global"/>
+
+        <!--
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+        -->
 
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/membership.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/style.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/requirejs/require.js")" data-main="@routes.Assets.at("javascripts/main")"></script>
