--- a/common/app/assets/stylesheets/style.scss
+++ b/common/app/assets/stylesheets/style.scss
@@ -32,6 +32,7 @@
 
 @import "components/crumb";
 @import "components/button";
+@import "layout/fluid-grid-system";
 
 
 /* ==========================================================================
