Add sbt-buildinfo so we can see what build is currently deployed
"I know this because build.sbt knows this."

https://github.com/sbt/sbt-buildinfo

--- a/app/views/partials/footer.scala.html
+++ b/app/views/partials/footer.scala.html
@@ -164,6 +164,7 @@
             <li class="colophon__item"><a data-link-name="terms" href="http://www.theguardian.com/help/terms-of-service">Terms &amp; conditions</a></li>
             <li class="colophon__item"><a data-link-name="privacy" href="http://www.theguardian.com/help/privacy-policy">Privacy policy</a></li>
             <li class="colophon__item"><a data-link-name="cookie" href="http://www.theguardian.com/info/cookies">Cookie policy</a></li>
+            <li class="colophon__item">Build #@app.BuildInfo.buildNumber</li>
             <li class="colophon__item hide-on-mobile">
                 <a class="js-main-site-link" rel="nofollow" href="http://www.theguardian.com/preference/platform/classic?page=http%3A%2F%2Fwww.theguardian.com%2Ftechnology%2F2014%2Fmay%2F12%2Fvideo-games-art-and-noise-tired-stereotypes-dominate-today-programme-debate%3Fview%3Dclassic" data-link-name="classic version UK">
 Current version
