tweaks to body headings, seperation of headings css file

--- a/app/views/joiner/tier/partner.scala.html
+++ b/app/views/joiner/tier/partner.scala.html
@@ -8,7 +8,7 @@
 <div class="page-inner-container">
 
     <section class="tier-section tier-section--left-aligned tier-section--no-border ">
-        <h1 class="section-header u-text-hyphenate">Partner Purpose/Value</h1>
+        <h1 class="section-headline u-text-hyphenate">Partner Purpose/Value</h1>
         <p>£15<a class="button button--margin button--wide join no-underline" href="/join/partner/payment">Join</a>Whats Included</p>
     </section>
 
@@ -28,15 +28,15 @@
 
     <div class="separator"></div>
     <section id="digital" class="tier-section">
-        <h2 class="section-header">Digital Benefits</h2>
+        <h2 class="section-body-heading">Digital Benefits</h2>
     </section>
 
     <section id="community" class="tier-section">
-        <h2 class="section-header">Community Benefits</h2>
+        <h2 class="section-body-heading">Community Benefits</h2>
     </section>
 
     <section id="live" class="tier-section tier-section--no-border">
-        <h2 class="section-header">Live Benefits</h2>
+        <h2 class="section-body-heading">Live Benefits</h2>
     </section>
 
     <div class="separator"></div>
