tweaks to css and layout of whats included section

--- a/app/views/joiner/tier/partner.scala.html
+++ b/app/views/joiner/tier/partner.scala.html
@@ -53,11 +53,9 @@
                 <span class="benefits-list__item">Live</span>
             </li>
             <li class="benefits-list benefits-list--left-aligned">
-                <p class="benefits-list__item">
-                    <p >Partner</p>
-                    <p>£15</p>
+                <p class="benefits-list__item">Partner £15
+                    <a class="button join no-underline" href="/join/partner/payment">Join</a>
                 </p>
-                <a class="button button--wide join no-underline" href="/join/partner/payment">Join</a>
             </li>
         </ul>
     </section>
