--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -6,9 +6,11 @@ html {
 
 .page-container {
     padding: gs-height(1) 0;
+    @include clearfix;
 }
 
 .page-inner-container {
+    @include clearfix;
     padding: $gutter $gutter/3;
     background-color: #FFFFFF;
     @include mq(tablet){
