--- a/app/views/joiner/tier/partner.scala.html
+++ b/app/views/joiner/tier/partner.scala.html
@@ -9,7 +9,7 @@
 
     <section class="tier-section tier-section--left-aligned tier-section--no-border ">
         <h1 class="section-headline u-text-hyphenate">Partner Purpose/Value</h1>
-        <p>£15<a class="button button--margin button--wide join no-underline" href="/join/partner/payment">Join</a>Whats Included</p>
+        <p>£15<a class="button button--inline button--margin button--wide join no-underline" href="/join/partner/payment">Join</a>Whats Included</p>
     </section>
 
     <section class="tier-navigation">
