removed whitespace, add unstyled class to ul

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,9 +8,9 @@
 
         <h1 class="section-header">Membership</h1>
 
-        <ul>
-            <li><a class="button" href="/join">Become a member</a></li>
-            <li><a href="/events">Events</a></li>
+        <ul class="u-unstyled">
+            <li><a href="/join">Become a member</a></li>
+            <li><a href="/events">Events</a></li>s
         </ul>
     </div>
 
