adjustments to css for buttons

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,7 +10,7 @@
 
         <ul class="u-unstyled">
             <li><a href="/join">Become a member</a></li>
-            <li><a href="/events">Events</a></li>s
+            <li><a href="/events">Events</a></li>
         </ul>
     </div>
 
