--- a/app/views/partials/joiner/paymentForm.scala.html
+++ b/app/views/partials/joiner/paymentForm.scala.html
@@ -2,7 +2,7 @@
 
 <form action="" method="POST" id="payment-form" class="form js-stripe-form">
 
-    <div class="js-payment-errors form__error hide"></div>
+    <div class="js-payment-errors form__error is-hidden"></div>
 
     <fieldset class="fieldset">
         <div class="fieldset__heading">
