--- a/common/app/assets/stylesheets/components/_button.scss
+++ b/common/app/assets/stylesheets/components/_button.scss
@@ -25,6 +25,7 @@
     }
 }
 
+.default-action,
 .sign-in--logged-in {
     background-color: $mem-brandOrange;
     &:hover {
@@ -38,5 +39,19 @@
     padding: $gutter;
     &:hover {
         background-color: darken($mem-brandBlue, 15%);
+    }
+}
+
+.i-wait {
+    display: none;
+    img {
+        margin-top: 9px;
+    }
+}
+
+.actions {
+    &.js-waiting .i-wait {
+        display: inline-block;
+        vertical-align: top;
     }
 }
