--- a/app/views/partials/joiner/paymentForm.scala.html
+++ b/app/views/partials/joiner/paymentForm.scala.html
@@ -58,7 +58,7 @@
         </div>
         <div class="fieldset__fields">
             <div class="actions top js-waiting-container">
-                <button type="submit" class="submit-input js-submit-input default-action">Subscribe</button>
+                <button type="submit" class="submit-input action--logged-in js-submit-input">Subscribe</button>
                 <div class="i-wait"><img src="@routes.Assets.at("images/wait.gif")" alt=""/></div>
             </div>
         </div>
