--- a/common/app/assets/stylesheets/style.scss
+++ b/common/app/assets/stylesheets/style.scss
@@ -31,7 +31,7 @@
    ========================================================================== */
 
 @import "components/crumb";
-@import "components/button";
+@import "components/action";
 
 
 /* ==========================================================================
