removed nexting in scss for i-wait class

--- a/common/app/assets/stylesheets/components/_action.scss
+++ b/common/app/assets/stylesheets/components/_action.scss
@@ -50,9 +50,7 @@
     }
 }
 
-.actions {
-    &.js-waiting .i-wait {
-        display: inline-block;
-        vertical-align: top;
-    }
+.actions.js-waiting .i-wait {
+    display: inline-block;
+    vertical-align: top;
 }
