--- a/app/views/joiner/tier/partner.scala.html
+++ b/app/views/joiner/tier/partner.scala.html
@@ -8,8 +8,13 @@
 <div class="page-inner-container">
 
     <section class="tier-section tier-section--left-aligned tier-section--no-border ">
-        <h1 class="section-headline u-text-hyphenate">Partner Purpose/Value</h1>
-        <p>£15<a class="action action--inline-text action--join" href="/join/partner/payment">Join</a>Whats Included</p>
+        <div>
+            <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
+        </div>
+        <div>
+            <h2 class="section-sub-headline u-text-hyphenate">Partner £15</h2>
+        </div>
+        <p><a class="action action--inline-text action--join" href="/join/partner/payment">Join</a><a href="#whats-included" class="whats-included">Whats Included</a></p>
     </section>
 
     <section class="tier-navigation">
@@ -40,7 +45,7 @@
     </section>
 
     <div class="separator"></div>
-    <section>
+    <section id="whats-included">
         <h2>Whats Included</h2>
         <ul class="benefits u-unstyled">
             <li class="benefits-list">
@@ -53,9 +58,9 @@
                 <span class="benefits-list__item">Live</span>
             </li>
             <li class="benefits-list benefits-list--left-aligned">
-                <p class="benefits-list__item">Partner £15
+                <span class="benefits-list__item">Partner £15
                     <a class="action action--join" href="/join/partner/payment">Join</a>
-                </p>
+                </span>
             </li>
         </ul>
     </section>
