--- a/common/app/assets/stylesheets/pages/_tier.scss
+++ b/common/app/assets/stylesheets/pages/_tier.scss
@@ -50,14 +50,13 @@
 
 .benefits {
     @include clearfix;
-    @include fs-bodyCopy(4);
 }
 
 .benefits-list {
     display: table;
     width: 100%;
     text-align: center;
-    margin-bottom: $gs-gutter;
+    padding: $gs-gutter;
     border-bottom: 1px solid #dfdfdf;
     @include mq(tablet){
         border: 1px solid #dfdfdf;
@@ -76,9 +75,15 @@
 }
 
 .benefits-list__item {
-    padding: $gs-baseline;
     @include mq(tablet){
         vertical-align: middle;
         display: table-cell;
+    }
+}
+
+.whats-included {
+    display: none;
+    @include mq(tablet){
+        display: inline-block;
     }
 }
