--- a/app/views/joiner/tier/partner.scala.html
+++ b/app/views/joiner/tier/partner.scala.html
@@ -10,10 +10,10 @@
     <section class="tier-section tier-section--left-aligned tier-section--no-border ">
         <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
         <h2 class="section-sub-headline u-text-hyphenate">Partner £15</h2>
-        <p><a class="action action--inline-text action--join" href="/join/partner/payment">Join</a><a href="#whats-included" class="whats-included">Whats Included</a></p>
+        <p><a class="action action--inline-text action--join" href="/join/partner/payment">Join</a><a href="#whats-included" class="hidden-mobile">Whats Included</a></p>
     </section>
 
-    <section class="tier-navigation">
+    <section class="tier-navigation hidden-mobile">
         <ul class="u-unstyled">
             <li class="tier-navigation__tab inline-list__item">
                 <a href="#digital" class="tier-navigation__btn">Digital</a>
