--- a/common/app/assets/stylesheets/_head.common.scss
+++ b/common/app/assets/stylesheets/_head.common.scss
@@ -23,6 +23,13 @@
 @import "base/tables";
 @import "base/images";
 
+
+/* ==========================================================================
+   Utility
+   ========================================================================== */
+@import "utility/hidden";
+
+
 /* ==========================================================================
    Layout
    ========================================================================== */
