--- a/app/views/partials/header.scala.html
+++ b/app/views/partials/header.scala.html
@@ -1,12 +1,13 @@
 <header>
     <div class="header-content gs-container">
-        <a href="/"><img src="@routes.Assets.at("images/membership.png")" alt="" /></a>
+        <a class="header__logo" href="/"><img src="@routes.Assets.at("images/membership_mobile.png")" alt="" /></a>
 
-        <div class="identity">
-            <span class="identity__notice">You are not signed in</span>
-            <span class="identity__avatar"></span>
-            <span class="identity__account"></span>
-            <span class="identity__tier"></span>
+        <div class="header__identity">
+            <span class="i-action"><span class="i-profile"></span></span>
+            <span class="identity__notice"><a href="http://profile.theguardian.com/signin?returnUrl=mem.theguardian.com">Sign in</a></span>
+            <span class="identity__avatar u-h"></span>
+            <span class="identity__account u-h"></span>
+            <span class="identity__tier u-h"></span>
         </div>
     </div>
 </header>
