partner thank you page markup, > partner thank you page styles, > visa place holder image

--- a/frontend/common/app/assets/stylesheets/layout/_layout.scss
+++ b/frontend/common/app/assets/stylesheets/layout/_layout.scss
@@ -23,6 +23,10 @@ body {
 }
 
 .separator {
-    border-top: 2px solid #4bc6df;
+    border-top: 2px solid $c-newsAccent;
     margin: $gs-baseline 0 $gs-baseline/2;
+}
+
+.align-center {
+    text-align: center;
 }
