renmaed tier scss file to joiner and adde comments for different pages, updated reference to joiner in style.scss,

--- a/frontend/common/app/assets/stylesheets/style.scss
+++ b/frontend/common/app/assets/stylesheets/style.scss
@@ -39,7 +39,7 @@
    ========================================================================== */
 
 @import "pages/events";
-@import "pages/tier";
+@import "pages/joiner";
 
 
 /* ==========================================================================
