updated classnames in partner tier page

--- a/frontend/app/views/joiner/tier/partner.scala.html
+++ b/frontend/app/views/joiner/tier/partner.scala.html
@@ -7,7 +7,7 @@
 
 <div class="page-inner-container">
 
-    <section class="tier-section tier-section--left-aligned tier-section--no-border ">
+    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
         <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
         <h2 class="section-sub-headline u-text-hyphenate">Partner £15</h2>
         <p><a class="action action--inline-text action--join" href="/join/partner/payment">Join</a><a href="#whats-included" class="hidden-mobile">Whats Included</a></p>
@@ -28,15 +28,15 @@
     </section>
 
     <div class="separator"></div>
-    <section id="digital" class="tier-section">
+    <section id="digital" class="joiner-section">
         <h2 class="section-body-heading">Digital Benefits</h2>
     </section>
 
-    <section id="community" class="tier-section">
+    <section id="community" class="joiner-section">
         <h2 class="section-body-heading">Community Benefits</h2>
     </section>
 
-    <section id="live" class="tier-section tier-section--no-border">
+    <section id="live" class="joiner-section joiner-section--no-border">
         <h2 class="section-body-heading">Live Benefits</h2>
     </section>
 
