fixed weird error in joiner.scss file

--- a/frontend/common/app/assets/stylesheets/pages/_joiner.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_joiner.scss
@@ -1,4 +1,107 @@
-Unstaged changes after reset:
-M	frontend/app/views/joiner/tier/partner.scala.html
-M	frontend/common/app/assets/stylesheets/pages/_joiner.scss
-D	frontend/common/app/assets/stylesheets/pages/_tier.scss
+/* ==========================================================================
+   Joiner
+   ========================================================================== */
+
+.joiner-section {
+    width: 100%;
+    border-bottom: 1px solid #dfdfdf;
+    margin: $gs-gutter 0;
+    padding: $gs-gutter/2;
+    text-align: center;
+    @include mq(tablet) {
+        padding: $gs-gutter*2;
+    }
+}
+
+.joiner-section--left-aligned {
+    text-align: left;
+}
+
+.joiner-section--no-border {
+    border: none;
+}
+
+.joiner-navigation {
+    @include clearfix;
+}
+
+.joiner-navigation__tab {
+    width: 100%;
+    text-align: center;
+    border: 1px solid #dfdfdf;
+    display: table;
+    float: left;
+    width: 33.3%;
+
+}
+
+.joiner-navigation__btn {
+    @include fs-bodyCopy(4);
+    background-color: #eaeaea;
+    height: gs-height(2);
+    width: 100%;
+    vertical-align: middle;
+    display: table-cell;
+    &:hover {
+        background-color: darken(#eaeaea, 15%);
+    }
+}
+
+/* ==========================================================================
+   Tier
+   ========================================================================== */
+
+.benefits {
+    @include clearfix;
+}
+
+.benefits-list {
+    display: table;
+    width: 100%;
+    text-align: center;
+    padding: $gs-gutter;
+    border-bottom: 1px solid #dfdfdf;
+    @include mq(tablet){
+        border: 1px solid #dfdfdf;
+        height: gs-height(3);
+        float: left;
+        margin: $gs-gutter $gs-gutter $gs-gutter 0;
+        width: 22%;
+    }
+}
+
+.benefits-list--left-aligned {
+    border: none;
+    @include mq(tablet){
+        text-align: left;
+    }
+}
+
+.benefits-list__item {
+    @include mq(tablet){
+        vertical-align: middle;
+        display: table-cell;
+    }
+}
+
+
+/* ==========================================================================
+   Thank You
+   ========================================================================== */
+
+.credit-card-provider {
+    vertical-align: middle;
+}
+
+.questions {
+  @include clearfix;
+}
+
+.questions__list {
+    width: 100%;
+    padding: $gs-gutter;
+    @include mq(tablet){
+        width: 50%;
+        float: left;
+    }
+}
