--- a/frontend/common/app/assets/stylesheets/layout/_footer.scss
+++ b/frontend/common/app/assets/stylesheets/layout/_footer.scss
@@ -2,7 +2,7 @@ footer {
   position: absolute;
   left: 0;
   bottom: 0;
-  height: 100px;
+  min-height: 100px;
   width: 100%;
   background-color: $c-neutral8;
   .copy {
