tweaks to styles, tweaks to markup, tweaks to copy

--- a/frontend/app/views/joiner/payment/partner.scala.html
+++ b/frontend/app/views/joiner/payment/partner.scala.html
@@ -2,10 +2,8 @@
 
 @main("Membership") {
 
-@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a partner", "/join/partner"), Crumb("Partner registration", "/join/partner/payment")))
-
 <div class="page-inner-container">
-    <h1 class="section-header">Partner registration</h1>
+    <h1 class="section-headline">Payment</h1>
     @partials.joiner.paymentForm()
 </div>
 
