--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -6,15 +6,18 @@
 
 <div class="page-inner-container">
 
-    <h1 class="section-header">Become a member</h1>
+    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
+        <h1 class="section-headline">Become a member</h1>
 
-    <p>You should become a guardian partner because Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et auctor nunc. Pellentesque posuere magna eu risus lobortis vel convallis elit scelerisque. Donec est justo, elementum vitae condimentum a, viverra eget augue.</p>
+        <p>You should become a guardian partner because Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et auctor nunc. Pellentesque posuere magna eu risus lobortis vel convallis elit scelerisque. Donec est justo, elementum vitae condimentum a, viverra eget augue.</p>
 
-    <ul class="u-unstyled">
-        <li class="tier"><a href="/join/friend">Become a Guardian Member</a></li>
-        <li class="tier"><a href="/join/partner">Register and become a Guardian Partner</a></li>
-        <li class="tier"><a href="/join/patron">Become a Guardian Patron</a></li>
-    </ul>
+        <ul class="tier-list u-unstyled">
+            <li><a href="/join/friend">Become a Friend</a></li>
+            <li><a href="/join/partner">Become a Partner</a></li>
+            <li><a href="/join/patron">Become a Patron</a></li>
+        </ul>
+
+    </section>
 
 </div>
 
