--- a/frontend/app/views/joiner/thankyou/partner.scala.html
+++ b/frontend/app/views/joiner/thankyou/partner.scala.html
@@ -2,20 +2,15 @@
 
 @main("Membership") {
 
-@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Partner", "/join/partner"), Crumb("Partner registration", "/join/partner/payment"), Crumb("Thank you Partner", "/join/partner/thankyou")))
-
 <div class="page-inner-container">
 
-    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
+    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
         <h1 class="section-headline u-text-hyphenate">Thank You</h1>
         <p>Nam eu purus eros. Sed tortor lectus, bibendum nec est et, interdum tristique magna. Aliquam erat volutpat. Curabitur faucibus a sem quis porttitor. Suspendisse semper dui libero, eu convallis sem pharetra nec.
         </p>
-        <p>Aenean et ipsum nulla. Maecenas consequat est sit amet lacus tincidunt, eu semper augue vehicula. Duis pharetra magna eu dolor molestie, sed facilisis augue dictum. In vestibulum auctor malesuada. Sed mattis lacus id pellentesque semper. Suspendisse scelerisque varius mauris, ac rhoncus elit blandit ac.
-        </p>
-        <p>Praesent nec metus sem. Integer quis dolor lectus. Nam consequat auctor ullamcorper. Nullam in odio gravida, laoreet justo a, vestibulum mauris.</p>
     </section>
 
-
+    <section class="joiner-section joiner-section--no-border">
         <table class="table table--responsive-font table--striped">
             <tr class="table__headline">
                 <td class="summary-table__cell">
@@ -67,21 +62,22 @@
                 </td>
             </tr>
         </table>
+    </section>
 
     <section class="align-center">
         <a class="action action--inline-text action--join action--wide" href="/join/partner/payment">Get Started</a>
     </section>
 
     <div class="separator"></div>
-    <section id="whats-included">
-        <h2>Questions</h2>
+    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border" id="whats-included">
+        <h2 class="section-body-heading-small">Questions</h2>
         <ul class="questions u-unstyled">
             <li class="questions__list">
-                <h2 class="section-body-heading">Whats Next?</h2>
+                <h3>What happens next?</h2>
                 <p>Donec convallis sem non facilisis dapibus. Suspendisse tincidunt tellus at mattis porttitor. Donec nibh odio, hendrerit sed est in, fringilla imperdiet tellus. Vestibulum sapien urna, auctor nec eleifend nec, ornare eget nisi.</p>
             </li>
             <li class="questions__list">
-                <h2 class="section-body-heading">No Email?</h2>
+                <h3>I haven't received an email?</h2>
                 <p>In quis nunc tristique, aliquam lectus nec, hendrerit nibh. Fusce eleifend nunc vel ante vestibulum, in ultrices augue fermentum. Etiam laoreet mauris quis sem semper, at feugiat nisi commodo.</p>
             </li>
         </ul>
