--- a/frontend/app/views/joiner/tier/partner.scala.html
+++ b/frontend/app/views/joiner/tier/partner.scala.html
@@ -13,16 +13,16 @@
         <p><a class="action action--inline-text action--join" href="/join/partner/payment">Join</a><a href="#whats-included" class="hidden-mobile">Whats Included</a></p>
     </section>
 
-    <section class="tier-navigation hidden-mobile">
+    <section class="joiner-navigation hidden-mobile">
         <ul class="u-unstyled">
-            <li class="tier-navigation__tab inline-list__item">
-                <a href="#digital" class="tier-navigation__btn">Digital</a>
+            <li class="joiner-navigation__tab inline-list__item">
+                <a href="#digital" class="joiner-navigation__btn">Digital</a>
             </li>
-            <li class="tier-navigation__tab inline-list__item">
-                <a href="#community" class="tier-navigation__btn">Community</a>
+            <li class="joiner-navigation__tab inline-list__item">
+                <a href="#community" class="joiner-navigation__btn">Community</a>
             </li>
-            <li class="tier-navigation__tab inline-list__item">
-                <a href="#live" class="tier-navigation__btn">Live</a>
+            <li class="joiner-navigation__tab inline-list__item">
+                <a href="#live" class="joiner-navigation__btn">Live</a>
             </li>
         </ul>
     </section>
